--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="work.html">Poetry</a></li>
+							<li class="active"><a href="work.html">LuminaSpeak Blog</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Braille Blog</a>
 							</li>
@@ -90,12 +90,12 @@
 		<aside id="fh5co-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/poetry.jpg);">
+			   	<li style="background-image: url(images/activity3.jpg);">
 			   		<div class="overlay-gradient"></div>
 		   			<div class="row">
 			   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
 			   				<div class="slider-text-inner text-center">
-			   					<h1 style="color: white">Poetry</h1>
+			   					<h1 style="color: white">LuminaSpeak Blog</h1>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -103,168 +103,7 @@
 			  	</ul>
 		  	</div>
 		</aside>		
-<div id="fh5co-work">
-			<div class="row">
-			    <a href="images/AWell.jpg" class="image-popup img-portfolio-detail" style="width: 50%">
-						<img src="images/AWell.jpg" alt="Free HTML5 Template by FreeHTML5.co" class="img-responsive">
-					</a>
-				<div class="col-md-4 fh5co-project-detail">
-					<h2 class="fh5co-project-title">A Well</h2>
-					<p>
-                A moon in the well, <br>
-                Full and bright, reflects the sky.  <br>
-                I see it in me.</p>
 
-		    </div>
-            </div>
-
-
-             <div class="row">
-                 <br>  <br>
-			    <a href="images/Misery.png" class="image-popup img-portfolio-detail" style="width: 50%">
-						<img src="images/Misery.png" alt="Free HTML5 Template by FreeHTML5.co" class="img-responsive">
-					</a>
-				<div class="col-md-4 fh5co-project-detail">
-					<h2 class="fh5co-project-title">A Poem for Misery</h2>
-					<p>I wrote a poem for misery  <br>
-                Sung by the stars, but nobody heard   <br>
-                To praise the forgotten story.   <br>
-                                                  <br>
-                Rivers were on fire and prairies were blown away.      <br>
-                The earth silenced and couldn’t say a word.    <br>
-                I wrote a poem for misery.            <br>
-                                                     <br>
-                The sky above heads was dull and gray.   <br>
-                But the olive branch was carried by birds    <br>
-                To praise the forgotten story.      <br>
-                                                    <br>
-                The gilded Buddha is wooden they say  <br>
-                Yet as soft as winds chasing the herd.  <br>
-                I wrote a poem for misery.      <br>
-                                                <br>
-                I once wished for a sunny day.   <br>
-                But why were my eyes in tears blurred——       <br>
-                To praise the forgotten story.          <br>
-                                                     <br>
-                The pain in stories never passed away.   <br>
-                While memories faded, I look backward.   <br>
-                I wrote a poem for misery         <br>
-                To praise the forgotten story.    <br>  </p>
-
-
-		    </div>
-            </div>
-
-             <div class="row">
-                <br><br>
-                <a href="images/PurpleSky.jpg" class="image-popup img-portfolio-detail" style="width: 50%">
-						<img src="images/PurpleSky.jpg" alt="Free HTML5 Template by FreeHTML5.co" class="img-responsive">
-					</a>
-				<div class="col-md-4 fh5co-project-detail">
-					<h2 class="fh5co-project-title">A Purple Sky</h2>
-					 <p>
-                It’s a purple day   <br>
-                Shine on the speeding highway.      <br>
-                Send the glare away            <br>
-                Sleep under the moonlight of May. <br> <br>
-
-                It’s a purple day         <br>
-                Blues, beer cans, and a romance story.    <br>
-                Soap opera and drowsiness make somebody stay  <br>
-                Dream about a dream with an X lover on the bay     <br> <br>
-
-                It’s a purple day   <br>
-                Dark night, white dreams, and countless past stories.   <br>
-                No, maybe I shouldn’t call it a purple day.        <br>
-                On a starless way. </p>
-
-		    </div>
-            </div>
-
-
-
-            <div class="row">
-                <br><br>
-                <a href="images/World.jpg" class="image-popup img-portfolio-detail" style="width: 50%">
-						<img src="images/World.jpg" alt="Free HTML5 Template by FreeHTML5.co" class="img-responsive">
-					</a>
-				<div class="col-md-4 fh5co-project-detail">
-					<h2 class="fh5co-project-title">World</h2>
-					 <p>
-                I know the world well <br>
-                Like I see me through mirrors –  <br>
-                Fragile yet lasting.  </p>
-
-		    </div>
-            </div>
-
-
-            <div class="row">
-                <br><br>
-                <a href="images/Sky.jpg" class="image-popup img-portfolio-detail" style="width: 50%">
-						<img src="images/Sky.jpg" alt="Free HTML5 Template by FreeHTML5.co" class="img-responsive">
-					</a>
-				<div class="col-md-4 fh5co-project-detail">
-					<h2 class="fh5co-project-title">The Sky Is a Big Hole</h2>
-                    <p>
-                The sky has a big hole poked by a bird,   <br>
-                Huffing and puffing in the wet wind.    <br>
-                The green carriage lurches over the hill.    <br>
-                In the moment of weightlessness, I jump into the world.     <br><br>
-
-                The mountain has a big hole poked by a horse,   <br>
-                Racing and tearing through the stifling fog.   <br>
-                Carnival drums and balloons ignore me.    <br>
-                In the moment of disappearance, I sleep in the hills.   <br><br>
-
-                Summer has a big hole poked by the rain,     <br>
-                Absorbing and sucking the green of the universe.  <br>
-                Drops of water join to form rivers.   <br>
-                In the moment the drops fall, I escape from the world.  <br><br>
-
-                The world has become a big hole,       <br>
-                Stuffed with bright red and oily green ink. <br>
-                The meandering streams lagging and dragging their tails.    <br>
-                In the moment of drying, I break the flow.     <br>
-                </p>
-
-
-		    </div>
-            </div>
-
-
-              <div class="row">
-                <br><br>
-                <a href="images/HerDeath.jpg" class="image-popup img-portfolio-detail" style="width: 50%">
-						<img src="images/HerDeath.jpg" alt="Free HTML5 Template by FreeHTML5.co" class="img-responsive">
-					</a>
-				<div class="col-md-4 fh5co-project-detail">
-					<h2 class="fh5co-project-title">Her Death</h2>
-                     <p>
-                She walked through a lush valley on a mid-March day. <br>
-                Azalea woke when her skirt flare brushed the green limb. <br>
-                Raindrops fell, and the wind carried grass seeds away. <br>
-                The universe bloomed, singing a sweet old hymn. <br><br>
-
-                It all changed when a few mud dots dropped <br>
-                From her hand to the ground, growing and being enlightened. <br>
-                They marched; they conquered; They pressed down the universe to be bowed.<br>
-                They buried her in the new world as if it was brightened.<br><br>
-
-                The king of nature! His voice is carried by billowing smoke.<br>
-                His vehicle shackles wild horses and strangles wandering whales.<br>
-                He kidnaps beauty and takes pride in putting her in yoke.<br>
-                His ignorance is the opening anthem of a decade of assail.<br><br>
-
-                Help, help! Now he whimpers in the fires and storms.<br>
-                The king of nature! In the silence of new world, nobody mourns.</p>
-
-		    </div>
-            </div>
-
-	</div>
-	</div>
-	</div><!-- END container-wrap -->
 
 
 
