--- a/work.html
+++ b/work.html
@@ -90,12 +90,12 @@
 		<aside id="fh5co-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/activity3.jpg);">
+			   	<li style="background-image: url(images/braille1.jpg);">
 			   		<div class="overlay-gradient"></div>
 		   			<div class="row">
 			   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
 			   				<div class="slider-text-inner text-center">
-			   					<h1 style="color: white">LuminaSpeak Blog</h1>
+			   					<h1 style="color: black">LuminaSpeak Blog</h1>
 			   				</div>
 			   			</div>
 			   		</div>
