--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Poetry</a></li>
+							<li><a href="work.html">LuminaSpeak Blog</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Braille Blog</a>
 							</li>
