--- a/work.html
+++ b/work.html
@@ -103,7 +103,23 @@
 			  	</ul>
 		  	</div>
 		</aside>		
-
+<div id="fh5co-blog">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<iframe width="320" height="240"
+						src="https://www.youtube.com/embed/IPv3IJtM7kI">
+						</iframe>
+						<div class="blog-text">
+							<span class="posted_on">Nov. 1st 2023</span>
+							<h3>New Project: Goals and Outlines</h3>
+                            <ul class="stuff">
+								<li><i class="icon-heart3"></i>7</li>
+								<li><i class="icon-eye2"></i>1,008</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 
 
 
