--- a/work.html
+++ b/work.html
@@ -108,6 +108,21 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
+						src="https://www.youtube.com/embed/3TEs-M3xOIQ">
+						</iframe>
+						<div class="blog-text">
+							<span class="posted_on">Nov. 6th 2023</span>
+							<h3><a href="#">Open Source</a></h3>
+							<ul class="stuff">
+								<li><i class="icon-heart3"></i>21</li>
+								<li><i class="icon-eye2"></i>1,405</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<iframe width="320" height="240"
 						src="https://www.youtube.com/embed/IPv3IJtM7kI">
 						</iframe>
 						<div class="blog-text">
