--- a/work.html
+++ b/work.html
@@ -108,6 +108,21 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
+						src="https://www.youtube.com/embed/kilhUMYATNw">
+						</iframe>
+						<div class="blog-text">
+							<span class="posted_on">Nov. 28th 2023</span>
+							<h3><a href="#">A Simple Image Reader using Tesseract</a></h3>
+							<ul class="stuff">
+								<li><i class="icon-heart3"></i>27</li>
+								<li><i class="icon-eye2"></i>1,433</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<iframe width="320" height="240"
 						src="https://www.youtube.com/embed/3TEs-M3xOIQ">
 						</iframe>
 						<div class="blog-text">
@@ -135,7 +150,6 @@
 						</div>
 					</div>
 				</div>
-
 
 
 	<div class="gototop js-top">
