--- a/work.html
+++ b/work.html
@@ -108,6 +108,23 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
+						src="https://www.youtube.com/embed/2nO7UMoGxW8">
+						</iframe>
+						<div class="blog-text">
+							<span class="posted_on">Dec. 25th 2023</span>
+							<h3><a href="#">Image Preprocessing</a></h3>
+							<ul class="stuff">
+								<li><i class="icon-heart3"></i>27</li>
+								<li><i class="icon-eye2"></i>1,176</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<iframe width="320" height="240"
 						src="https://www.youtube.com/embed/kilhUMYATNw">
 						</iframe>
 						<div class="blog-text">
